--- a/maybe-front/src/App.css
+++ b/maybe-front/src/App.css
@@ -22,3 +22,29 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.book-info-background {
+    background:#efefef;
+}
+
+.book-info-inner {
+}
+
+.book-info-thumbnail {
+    width:400px;
+}
+
+.container {
+    width:1080px;
+    margin:0 auto;
+    display:flex;
+    display:-webkit-flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+@media(max-width:768px) {
+    .container {
+        width:100%;
+        flex-direction: column;
+    }
+}
